# ros2_test

./: CMakeLists.txt  README.md  package.xml
scripts/: ai_node.py  control_node.cpp
